--- a/src/Eccube/Resource/template/default/Farm/farm_contact_complete.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_contact_complete.twig
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="{{ app.config.admin_urlpath }}/assets/css/fileupload/jquery.fileupload.css">
     <link rel="stylesheet" href="{{ app.config.admin_urlpath }}/assets/css/fileupload/jquery.fileupload-ui.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+    <style type="text/css">
+        #receiver-form {
+            min-height: 700px;
+        }
+
+        input
+    </style>
 {% endblock stylesheet %}
 
 {% block javascript %}
@@ -28,31 +35,12 @@
             <a href="{{ url('farm_home', {'id': TargetCustomer.id} ) }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home"></a>
             <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg"></a>
         </div>
-        <form id="receiver-form" method="post" action="" enctype="multipart/form-data">
-            {{ form_widget(form._token) }}
-            <div id="item-info">
-                <div class="col-sm-12 col-xs-12">
-                    <div class="form-group">
-                        <label class="display-block">お問い合わせ内容</label>
-                        {{ form_widget(form.title, {attr: {placeholder: 'タイトルを入力...'}}) }}
-                        {{ form_errors(form.title) }}
-                    </div>
-                </div>
-                <div class="col-sm-12 col-xs-12">
-                    <div class="form-group">
-                        {{ form_widget(form.contents, {attr: {placeholder: 'お問い合せ内容を入力...', class : 'height120'}}) }}
-                        {{ form_errors(form.contents) }}
-                    </div>
-                </div>
-
-                <div class="col-sm-12 col-xs-12">
-                    <button type="submit" class="btn btn-inactive margin-bottom40" name="mode" value="confirm">確認ページへ</button>
-                </div>
-                <p class="title12 text-alight-center margin-top15">注文した商品が届かない・出荷に間に合わなかったなど</p>
-                <p class="title12 text-alight-center">緊急時の場合は下記へご連絡ください</p>
-                <p class="title20 text-alight-center">00-1234-5678</p>
-            </div>
-        </form>
+        <h3 id="complete_box__header_message" class="text-alight-center">お問い合わせ内容の送信が完了いたしました。</h3>
+        <p class="title14 text-alight-center margin-top15">
+            万一、ご回答メールが届かない場合は、トラブルの可能性もありますので<br />
+            大変お手数ではございますがもう一度お問い合わせいただくか、お電話にてお問い合わせください。<br />
+            今後ともご愛顧賜りますようよろしくお願い申し上げます。
+        </p>
     </div>
 
     <!-- The Modal -->
@@ -120,3 +108,4 @@
         </div>
     </div>
 {% endblock %}
+
