--- a/src/Eccube/Resource/template/default/Mail/contact_mail.twig
+++ b/src/Eccube/Resource/template/default/Mail/contact_mail.twig
@@ -44,5 +44,5 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 ■電話番号：{{ data.tel01 }} - {{ data.tel02 }} - {{ data.tel03 }}
 ■メールアドレス：{{ data.email }}
 ■お問い合わせの内容
-
+{{ data.title }}
 {{ data.contents }}
