--- a/src/Eccube/Resource/template/default/Farm/farm_contact.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_contact.twig
@@ -77,7 +77,7 @@
                 <li class="list-group-item"><a href="#">過去の出品</a></li>
                 <li class="list-group-item"><a href="#"><span>お知らせ</span><span class="li-active">&#x25CF;</span></a></li>
                 <li class="list-group-item" id="setting"><a href="#">設定</a></li>
-                <li class="list-group-item"><a href="#">お問い合わせ</a></li>
+                <li class="list-group-item"><a href="{{ url('farm_contact') }}">お問い合わせ</a></li>
                 <li class="list-group-item"><a href="#">ガイド</a></li>
             </ul>
 
