--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -2386,13 +2386,183 @@ img {
 }
 
 /*Farm item detail*/
-.slides img {
-    max-width: 100%;
-}
-
-
 .description {
     background-color: #f2f3f7;
     border-radius: 5px;
     padding: 15px;
+}
+
+/* Slider */
+.slick-loading .slick-list {
+    background: #fff url('ajax-loader.gif') center center no-repeat;
+}
+
+
+#item_photo_area {
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+#item_photo_area img {
+    text-align: center;
+    max-width: 100%;
+}
+
+.slick-slider {
+    margin-bottom: 30px;
+}
+
+.slick-dots {
+    position: absolute;
+    bottom: -45px;
+    display: block;
+    width: 100%;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+}
+
+.slick-dots li {
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    padding: 0;
+    cursor: pointer;
+}
+
+.slick-dots li button {
+    font-size: 0;
+    line-height: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    cursor: pointer;
+    color: transparent;
+    border: 0;
+    outline: none;
+    background: transparent;
+}
+
+/* Arrow */
+
+.slick_prev,
+.slick_next {
+    font-size: 18px;
+    font-size: 1.8rem;
+    width: 40px; height: 40px;
+    line-height: 40px;
+}
+
+/* Dots */
+.slick-slider {
+    margin-bottom: 30px;
+}
+
+.slick-dots {
+    position: absolute;
+    bottom: -45px;
+    display: block;
+    width: 100%;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+}
+.slick-dots li {
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    padding: 0;
+
+    cursor: pointer;
+}
+.slick-dots li button {
+    font-size: 0;
+    line-height: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    cursor: pointer;
+    color: transparent;
+    border: 0;
+    outline: none;
+    background: transparent;
+}
+.slick-dots li button:hover,
+.slick-dots li button:focus {
+    outline: none;
+}
+.slick-dots li button:hover:before,
+.slick-dots li button:focus:before {
+    opacity: 1;
+}
+.slick-dots li button:before {
+    content:" ";
+    line-height: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 12px;
+    height: 12px;
+    text-align: center;
+    opacity: .25;
+    background-color: black;
+    border-radius: 50%;
+
+}
+.slick-dots li.slick-active button:before {
+    opacity: .75;
+    background-color: black;
+}
+
+.slick-dots li button.thumbnail img {
+    width: 0; height: 0;
+}
+
+#item_photo_area .slick-slide {
+    text-align: center;
+}
+#item_photo_area .slick-slide img {
+    display: inline-block;
+}
+
+@media only screen and (min-width: 768px) {
+    #item_photo_area .slick-dots {
+        margin: 0 -16px;
+        position: relative;
+        bottom: 0;
+    }
+    #item_photo_area .slick-dots::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    #item_photo_area .slick-dots li {
+        width: 33.33333333%; height: auto;
+        padding: 16px;
+        margin: 0;
+        float: left;
+    }
+
+    .slick-dots li button.thumbnail {
+        width: 100%; height: auto;
+        padding: 0;
+    }
+    .slick-dots li button.thumbnail img {
+        width: 100%; height: auto;
+        opacity: 0.8;
+    }
+    .slick-dots li button.thumbnail:hover img,
+    .slick-dots li.slick-active button.thumbnail img {
+        opacity: 1;
+    }
+    .slick-dots li button.thumbnail::before {
+        display: none;
+    }
 }
