add privacy + agremeent

--- a/app/template/default/Block/new_footer.twig
+++ b/app/template/default/Block/new_footer.twig
@@ -1,9 +1,9 @@
 <div id="footer" class="clearfix">
     <ul>
         <li><a href="#">やさいバスについて</a></li>
-        <li><a href="#">プライバシーポリシー</a></li>
-        <li><a href="#">お問い合わせ</a></li>
-        <li><a href="#">利用規約</a></li>
+        <li><a href="{{ url('help_privacy') }}">プライバシーポリシー</a></li>
+        <li><a href="{{ url('farm_contact') }}">お問い合わせ</a></li>
+        <li><a href="{{ url('help_agreement') }}">利用規約</a></li>
         <li><a href="#">運営会社</a></li>
     </ul>
     <p class="clearfix">Copyright© M2 Labo inc. All rights reserved.</p>
