--- a/src/Eccube/Resource/template/default/Farm/service_signup.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_signup.twig
@@ -119,8 +119,8 @@
                 <p class="title12">申し込みの際には利用規約・プライバシーポリシー</p>
                 <p class="title12">の 確認をお願いいたします</p>
                 <p class="title12">
-                    <a href="#" class="color888 margin-right15">利用規約</a>
-                    <a href="#" class="color888 margin-left13">プライバシーポリシー</a>
+                    <a href="{{ url('help_agreement') }}" class="color888 margin-right15" target="_blank">利用規約</a>
+                    <a href="{{ url('help_privacy') }}" class="color888 margin-left13" target="_blank">プライバシーポリシー</a>
                 </p>
                 <div class="col-sm-12 col-xs-12">
                 <button type="submit" class="btn btn-inactive">同意して申し込みをする</button>
