--- a/src/Eccube/Resource/template/default/Help/privacy.twig
+++ b/src/Eccube/Resource/template/default/Help/privacy.twig
@@ -20,29 +20,34 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #}
 {% extends 'default_frame.twig' %}
-
+{% set body_class = ' ' %}
+{% block stylesheet %}
+    <style type="text/css">
+        #receiver-form {
+            min-height: 700px;
+        }
+    </style>
+{% endblock stylesheet %}
 {% block main %}
-    <div id="contents" class="main_only">
-        <div id="privacy_wrap" class="container-fluid inner no-padding">
-            <div id="main">
-                <h1 class="page-heading">プライバシーポリシー</h1>
-                <div id="privacy_box" class="container-fluid">
-                    <div id="privacy_box__body" class="row">
-                        <div id="privacy_box__body_inner" class="col-md-10 col-md-offset-1">
-                            <p id="privacy_box__declaration">
-                                {% if BaseInfo.company_name is not null %}
-                                    {{ BaseInfo.company_name }}は、
-                                {% endif %}
-                                個人情報保護の重要性に鑑み、「個人情報の保護に関する法律」及び本プライバシーポリシーを遵守し、お客さまのプライバシー保護に努めます。
-                            </p>
-                            <br />
-                            <h3 id="privacy_box__lead_header">個人情報の定義</h3>
-                            <p id="privacy_box__lead">お客さま個人に関する情報(以下「個人情報」といいます)であって、お客さまのお名前、住所、電話番号など当該お客さま個人を識別することができる情報をさします。他の情報と組み合わせて照合することにより個人を識別することができる情報も含まれます。</p>
-                        </div><!-- /.col -->
-                    </div><!-- /.row -->
-
-                </div>
-            </div>
+    <div class="wrapper container" id="receiver-form">
+        <div class="farmer-new-header">
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg"></a>
+        </div>
+        <h1 class="page-heading">プライバシーポリシー</h1>
+        <div id="privacy_box" class="container-fluid">
+            <div id="privacy_box__body" class="row">
+                <div id="privacy_box__body_inner" class="col-sm-12 col-xs-12">
+                    <p id="privacy_box__declaration">
+                        {% if BaseInfo.company_name is not null %}
+                            {{ BaseInfo.company_name }}は、
+                        {% endif %}
+                        個人情報保護の重要性に鑑み、「個人情報の保護に関する法律」及び本プライバシーポリシーを遵守し、お客さまのプライバシー保護に努めます。
+                    </p>
+                    <br />
+                    <h3 id="privacy_box__lead_header">個人情報の定義</h3>
+                    <p id="privacy_box__lead">お客さま個人に関する情報(以下「個人情報」といいます)であって、お客さまのお名前、住所、電話番号など当該お客さま個人を識別することができる情報をさします。他の情報と組み合わせて照合することにより個人を識別することができる情報も含まれます。</p>
+                </div><!-- /.col -->
+            </div><!-- /.row -->
         </div>
     </div>
 {% endblock %}
