--- a/src/Eccube/Resource/template/default/Farm/farm_item_detail.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_item_detail.twig
@@ -162,7 +162,7 @@
                                 </p>
                             </div>
                             <div class="float-right">
-                            {% if app.user.id == TargetCustomer.id %}
+                            {% if is_granted("IS_AUTHENTICATED_FULLY") and app.user.id == TargetCustomer.id %}
                                 <a href="?" id="farmer-button-confirm" class="btn btn-success margin-top15 background344250 order_again">注文数の確認</a>
                                 <a href="{{ url('farm_item_edit', {'id': Product.id}) }}" id="farmer-button-edit" class="btn btn-success margin-top15">編集</a>
                             {% elseif is_granted("ROLE_RECIPIENT") %}
@@ -254,7 +254,7 @@
             </div>
 
             <div class="voice-section" style="display: block">
-                {% if is_granted('ROLE_USER') %}
+                {% if is_granted("IS_AUTHENTICATED_FULLY") %}
                     <div class="row">
                         <div class="col-sm-12 col-xs-12">
                             <div class="voice clearfix">
@@ -350,10 +350,7 @@
         <div class="Rectangle">
             <ul class="list-group" id="main-menu">
                 <li class="list-group-item li-profile">
-                    {% if TargetCustomer.profile_image %}
-                        {% set img = app.config.image_save_urlpath ~'/'~ TargetCustomer.profile_image %}
-                    {% endif %}
-                    <img id="upload-image" src="{{ img }}" alt="profile" class="img-circle small-profile">
+                    <img id="upload-image" src="{{ app.config.image_save_urlpath }}/{{ TargetCustomer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
                     <span class="profile-name">{{ TargetCustomer.__toString }}</span>
                     <span class="button-x">X</span>
                 </li>
@@ -367,10 +364,7 @@
 
             <ul class="list-group hidden" id="setting-menu">
                 <li class="list-group-item li-profile">
-                    {% if TargetCustomer.profile_image %}
-                        {% set img = app.config.image_save_urlpath ~'/'~ TargetCustomer.profile_image %}
-                    {% endif %}
-                    <img id="upload-image" src="{{ img }}" alt="profile" class="img-circle small-profile">
+                    <img id="upload-image" src="{{ app.config.image_save_urlpath }}/{{ TargetCustomer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
                     <span class="profile-name">{{ TargetCustomer.__toString }}</span>
                     <span class="button-x">X</span>
                 </li>
