--- a/src/Eccube/Resource/template/default/Farm/farm_profile_edit.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_profile_edit.twig
@@ -370,10 +370,7 @@
         <div class="Rectangle">
             <ul class="list-group" id="main-menu">
                 <li class="list-group-item li-profile">
-                    {% if Customer.profile_image %}
-                        {% set img = app.config.image_save_urlpath ~'/'~ Customer.profile_image %}
-                    {% endif %}
-                    <img id="upload-image" src="{{ img }}" alt="profile" class="img-circle small-profile">
+                    <img id="upload-image" src="{{ app.config.image_save_urlpath }}/{{ Customer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
                     <span class="profile-name">{{ Customer.__toString }}</span>
                     <span class="button-x">X</span>
                 </li>
@@ -387,10 +384,7 @@
 
             <ul class="list-group hidden" id="setting-menu">
                 <li class="list-group-item li-profile">
-                    {% if Customer.profile_image %}
-                        {% set img = app.config.image_save_urlpath ~'/'~ Customer.profile_image %}
-                    {% endif %}
-                    <img id="upload-image" src="{{ img }}" alt="profile" class="img-circle small-profile">
+                    <img id="upload-image" src="{{ app.config.image_save_urlpath }}/{{ Customer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
                     <span class="profile-name">{{ Customer.__toString }}</span>
                     <span class="button-x">X</span>
                 </li>
