--- a/src/Eccube/Resource/template/default/Cart/index.twig
+++ b/src/Eccube/Resource/template/default/Cart/index.twig
@@ -189,6 +189,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                                 </div>
 
                                 <div class="cart-content" id="cart-main-content">
+                                    <form method="post" action="?">
+                                        <input type="hidden" name="mode" value="confirm">
+                                        <input type="hidden" name="date_id" value="{{ reception_date|date('N') }}">
                                     {% for CartItem in Cart.CartItems %}
                                         {% if CartItem.reception_date|date('U') == reception_date|date('U') %}
                                             {% set ProductClass = CartItem.Object %}
@@ -221,8 +224,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                                     {% endfor %}
                                     <div class="product-cart-button">
                                         {#<p>あと2時間30分で自動的に注文が確定されます</p>#}
-                                        <button class="cart-button-confirm btn btn-success">注文内容を確認する</button>
+                                        <button class="cart-button-confirm btn btn-success" type="submit">注文内容を確認する</button>
                                     </div>
+                                    </form>
                                 </div>
 
                             {% endfor %}
