Add order status

--- a/src/Eccube/Resource/template/default/Cart/complete.twig
+++ b/src/Eccube/Resource/template/default/Cart/complete.twig
@@ -30,8 +30,7 @@
                 <span>取引中画面からステータスを確認できます</span>
             </p>
             <div class="col-sm-12 col-xs-12">
-                <div
-            <button class="btn btn-success" id="cart-done-button">取引状況を確認する</button>
+                <a href="{{ url('order', {'id': id}) }}" class="btn btn-success" id="cart-done-button">取引状況を確認する</a>
             </div>
         </div>
 
